# black_harrier_abm_v2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: 01_project_overview.md  02_architecture.md  03_usage.md  example_config.yaml
src/black_harrier_abm_v2/: __init__.py  agents.py  config.py  environment.py  movement.py  risk.py
src/black_harrier_abm_v2/samplers/: __init__.py  raster.py
src/black_harrier_abm_v2/utils/: geo.py
tests/: test_smoke.py
