[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-harrier-abm-v2"
version = "0.0.1"
description = "ABM for Black Harrier flight prediction and wind-energy risk assessment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]